--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "pg": "^6.1.5",
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
-    "soa-demo-token": "file:../soa-demo-token",
-    "soa-demo-service": "file:../soa-demo-service"
+    "soa-demo-token": "jaw977/soa-demo-token",
+    "soa-demo-service": "jaw977/soa-demo-service"
   }
 }
