--- a/package.json
+++ b/package.json
@@ -17,6 +17,6 @@
     "pg-hstore": "^2.3.2",
     "sequelize": "^3.30.4",
     "soa-demo-token": "file:../soa-demo-token",
-    "soa-demo-service": "file:../soa-demo-service"
+    "soa-demo-service-amqp": "jaw977/soa-demo-service-amqp"
   }
 }
